# GetCurrency

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp
Logic/: ExchangeRate.cpp  ExchangeRate.h
UI/: GetDollarUI.cpp  GetDollarUI.h  GetDollarUI.ui
